Añadimos un preview al enviar el enlace

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src/assets/roberto.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@robertodfj</title>
+
+    <link rel="icon" href="/roberto.png" />
+
+    <!-- Open Graph / Facebook / WhatsApp -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Mi Portfolio – Roberto Frutos" />
+    <meta property="og:description" content="Portfolio de desarrollo web y proyectos con React y Spring Boot" />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:url" content="https://tu-portfolio.netlify.app" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mi Portfolio – Roberto Frutos" />
+    <meta name="twitter:description" content="Portfolio de desarrollo web y proyectos con React y Spring Boot" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/preview.png" />
   </head>
   <body>
     <div id="root"></div>
